Added Hover to Navigation

--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
                 <p>Human's graceful, playful, and lovable companions</p>    
             </div>
         </div>
-        
     </header>
 
     <main>
         <div>
-            <article>
+            <article id="About">
+                
+            </article>
+            <article id="Colors">
+
+            </article>
+            <article id="Trivia">
 
             </article>
         </div>
