--- a/index.html
+++ b/index.html
@@ -29,24 +29,36 @@
     </header>
 
     <main>
-        <div>
-            <article id="About">
-                <div>
-                    <h2>About Cats</h2>
-                    <p>The domestic cat or the latin name <i>Felis Catus</i> is a small, typically furry, carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. Cats are valued by humans for companionship and their ability to hunt vermin such as mice. About 60 cat breeds are recognized by various cat registries.</p>
-                    <p>Cats have been associated with humans for at least 9,500 years and are currently the most popular pet in the world. They are also one of the most widely known of all pets, with a population of more than 95 million in the United States alone, and more than 600 million worldwide.</p>
-                </div>
-            </article>
-            <article id="Colors">
+        <div class="Content">
+            <div>
+                <article id="About">
+                    <div class="Info">
+                        <h2>About Cats</h2>
+                        <p>The domestic cat or the latin name <i>Felis Catus</i> is a small, typically furry, carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. Cats are valued by humans for companionship and their ability to hunt vermin such as mice. About 60 cat breeds are recognized by various cat registries.</p>
+                        <p>Cats have been associated with humans for at least 9,500 years and are currently the most popular pet in the world. They are also one of the most widely known of all pets, with a population of more than 95 million in the United States alone, and more than 600 million worldwide.</p>
+                    </div>
+                </article>
+                <article id="Colors">
+                    <div>
 
-            </article>
-            <article id="Trivia">
+                    </div>
+                </article>
+                <article id="Trivia">
+                    <div>
 
-            </article>
+                    </div>
+                </article>    
+            </div>
+            <aside class="Side-Content">
+                <header>
+                    <div>
+                        <h1>Creator of the website:</h1>
+                        <img src="" alt="">
+                    </div>
+                </header>
+            </aside>
         </div>
-        <aside>
-
-        </aside>
+        
     </main>
 
     <footer>
