--- a/index.html
+++ b/index.html
@@ -40,12 +40,23 @@
                 </article>
                 <article id="Colors">
                     <div>
-
+                        <h2>Cat Colors</h2>
+                        <p>Cats come in a variety of colors and patterns. Some common colors include black, white, gray, orange, and brown. Patterns can include solid, tabby, calico, tortoiseshell, and bicolor. Each color and pattern can have different genetic backgrounds and can be influenced by the breed of the cat.</p>
+                        <p>Calico cats are all female due to genetics. Orange tabby cats are known for their friendly personalities, and white cats are sometimes thought to be more prone to deafness. Each color and pattern can have unique stories and characteristics associated with them.</p>
                     </div>
                 </article>
                 <article id="Trivia">
                     <div>
-
+                        <h2>Cat Trivia</h2>
+                        <ul>
+                            <li>Cats have five toes on their front paws, but only four toes on their back paws.</li>
+                            <li>A group of cats is called a clowder.</li>
+                            <li>Cats can rotate their ears 180 degrees.</li>
+                            <li>The average cat sleeps for 12-16 hours a day.</li>
+                            <li>Cats have a unique grooming behavior where they lick their fur to keep it clean and regulate their body temperature.</li>
+                            <li>Cats can make over 100 different sounds, while dogs can only make about 10.</li>
+                            <li>The world's oldest cat lived to be 38 years old.</li>
+                        </ul>
                     </div>
                 </article>    
             </div>
