--- a/index.html
+++ b/index.html
@@ -7,20 +7,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
+        crossorigin="anonymous"
+        referrerpolicy="noreferrer"
+    >
     <title>All about Cats</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul class="Navigation">
-                <a href="">About</a>
-                <a href="">Cat Colors</a>
-                <a href="">Trivia</a>
+            <ul class="navigation">
+                <a href="#about">About</a>
+                <a href="#colors">Cat Colors</a>
+                <a href="#trivia">Trivia</a>
             </ul>
         </nav>
-        <div class="Hero">
+        <div class="hero">
             <img src="./assets/cat_hero.jpg" alt="">
-            <div class="Hero-text">
+            <div class="hero-text">
                 <h1>All about:</h1>
                 <h2>Cats</h2>
                 <p>Human's graceful, playful, and lovable companions</p>    
@@ -29,24 +36,24 @@
     </header>
 
     <main>
-        <div class="Content">
-            <div>
-                <article id="About">
-                    <div class="Info">
+        <div class="content">
+            <div class="articles-div">
+                <article id="about">
+                    <div class="info">
                         <h2>About Cats</h2>
                         <p>The domestic cat or the latin name <i>Felis Catus</i> is a small, typically furry, carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. Cats are valued by humans for companionship and their ability to hunt vermin such as mice. About 60 cat breeds are recognized by various cat registries.</p>
                         <p>Cats have been associated with humans for at least 9,500 years and are currently the most popular pet in the world. They are also one of the most widely known of all pets, with a population of more than 95 million in the United States alone, and more than 600 million worldwide.</p>
                     </div>
                 </article>
-                <article id="Colors">
-                    <div>
+                <article id="colors">
+                    <div class="info">
                         <h2>Cat Colors</h2>
                         <p>Cats come in a variety of colors and patterns. Some common colors include black, white, gray, orange, and brown. Patterns can include solid, tabby, calico, tortoiseshell, and bicolor. Each color and pattern can have different genetic backgrounds and can be influenced by the breed of the cat.</p>
                         <p>Calico cats are all female due to genetics. Orange tabby cats are known for their friendly personalities, and white cats are sometimes thought to be more prone to deafness. Each color and pattern can have unique stories and characteristics associated with them.</p>
                     </div>
                 </article>
-                <article id="Trivia">
-                    <div>
+                <article id="trivia">
+                    <div class="info">
                         <h2>Cat Trivia</h2>
                         <ul>
                             <li>Cats have five toes on their front paws, but only four toes on their back paws.</li>
@@ -60,20 +67,24 @@
                     </div>
                 </article>    
             </div>
-            <aside class="Side-Content">
+            <aside class="side-content">
                 <header>
                     <div>
                         <h1>Creator of the website:</h1>
-                        <img src="" alt="">
+                        <img src="./assets/cat_profile.jpg" alt="" class="profile-img">
+                        <p>Briran</p>
                     </div>
                 </header>
             </aside>
         </div>
-        
     </main>
 
     <footer>
-
+        <h3>Created by Alexander Brian Susanto, 2025</h3>
+        <ul class="social-media">
+            <li><a href="#"><i class="fab fa-github github"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in linkedin"></i></a></li>
+        </ul>
     </footer>
 
 </body>
