--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <div class="hero">
-            <img src="./assets/cat_hero.jpg" alt="">
+            <img src="./assets/cat_hero.jpg" alt="cat_hero">
             <div class="hero-text">
                 <h1>All about:</h1>
                 <h2>Cats</h2>
@@ -41,8 +41,9 @@
                 <article id="about">
                     <div class="info">
                         <h2>About Cats</h2>
-                        <p>The domestic cat or the latin name <i>Felis Catus</i> is a small, typically furry, carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. Cats are valued by humans for companionship and their ability to hunt vermin such as mice. About 60 cat breeds are recognized by various cat registries.</p>
-                        <p>Cats have been associated with humans for at least 9,500 years and are currently the most popular pet in the world. They are also one of the most widely known of all pets, with a population of more than 95 million in the United States alone, and more than 600 million worldwide.</p>
+                        <img src="./assets/cat_stare.webp" alt="cat_stare">
+                        <p>The domestic cat or the latin name <i>Felis Catus</i> is a small, furry, and carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. Cats are valued by humans for companionship and their ability to hunt vermin such as mice. As of now around 60 cat breeds are recognized by various cat registries.</p>
+                        <p>Cats have been associated with humans for at least 9,500 years and are currently one of the most popular pet in the world alongside dogs. They are also one of the most widely known of all pets, with a population of more than 95 million in the United States alone, and more than 600 million worldwide.</p>
                     </div>
                 </article>
                 <article id="colors">
@@ -95,6 +96,9 @@
 Image taken from:
 
 cat_hero.jpg: https://www.google.com/url?sa=i&url=https%3A%2F%2Ftranslate.google.com%2Ftranslate%3Fu%3Dhttps%3A%2F%2Fen.wikipedia.org%2Fwiki%2FCat%26hl%3Did%26sl%3Den%26tl%3Did%26client%3Dimgs&psig=AOvVaw174iREl4TjBn9KbJ84PKNi&ust=1756715065014000&source=images&cd=vfe&opi=89978449&ved=0CBcQjRxqFwoTCOC5h-vPtI8DFQAAAAAdAAAAABAE
+
+
+mr_fresh.jpg: https://www.google.com/url?sa=i&url=https%3A%2F%2Ftranslate.google.com%2Ftranslate%3Fu%3Dhttps%3A%2F%2Fm.streetcat.wiki%2Findex.php%2FMr._Fresh%26hl%3Did%26sl%3Den%26tl%3Did%26client%3Dimgs&psig=AOvVaw1gLh3loQJQrXgg-omykFuv&ust=1756873400500000&source=images&cd=vfe&opi=89978449&ved=0CBcQjRxqFwoTCIi8nsmduY8DFQAAAAAdAAAAABAE
 
 
 
