Added Reference links

--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@ Image taken from:
 cat_hero.jpg: https://www.google.com/url?sa=i&url=https%3A%2F%2Ftranslate.google.com%2Ftranslate%3Fu%3Dhttps%3A%2F%2Fen.wikipedia.org%2Fwiki%2FCat%26hl%3Did%26sl%3Den%26tl%3Did%26client%3Dimgs&psig=AOvVaw174iREl4TjBn9KbJ84PKNi&ust=1756715065014000&source=images&cd=vfe&opi=89978449&ved=0CBcQjRxqFwoTCOC5h-vPtI8DFQAAAAAdAAAAABAE
 
 
-mr_fresh.jpg: https://www.google.com/url?sa=i&url=https%3A%2F%2Ftranslate.google.com%2Ftranslate%3Fu%3Dhttps%3A%2F%2Fm.streetcat.wiki%2Findex.php%2FMr._Fresh%26hl%3Did%26sl%3Den%26tl%3Did%26client%3Dimgs&psig=AOvVaw1gLh3loQJQrXgg-omykFuv&ust=1756873400500000&source=images&cd=vfe&opi=89978449&ved=0CBcQjRxqFwoTCIi8nsmduY8DFQAAAAAdAAAAABAE
-
+cat_stare.webp: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.reddit.com%2Fr%2Fcats%2Fcomments%2F1jv1gmh%2Fpost_the_best_cat_memes_you_got_in_the_comments%2F&psig=AOvVaw2C68r3nn-wuPSxoSMaHj9p&ust=1756873566719000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCMjw25eeuY8DFQAAAAAdAAAAABAW
 
 
 -->
