Added Social Media Links

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <footer>
         <h3>Created by Alexander Brian Susanto, 2025</h3>
         <ul class="social-media">
-            <li><a href="#"><i class="fab fa-github github"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in linkedin"></i></a></li>
+            <li><a href="https://github.com/BriranSus"><i class="fab fa-github github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/alexander-brian-susanto-11419b260"><i class="fab fa-linkedin-in linkedin"></i></a></li>
         </ul>
     </footer>
 
