--- a/index.html
+++ b/index.html
@@ -35,49 +35,49 @@
         </div>
     </header>
 
-    <main>
-        <div class="content">
-            <div class="articles-div">
-                <article id="about">
-                    <div class="info">
-                        <h2>About Cats</h2>
-                        <img src="./assets/cat_stare.webp" alt="cat_stare">
-                        <p>The domestic cat or the latin name <i>Felis Catus</i> is a small, furry, and carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. Cats are valued by humans for companionship and their ability to hunt vermin such as mice. As of now around 60 cat breeds are recognized by various cat registries.</p>
-                        <p>Cats have been associated with humans for at least 9,500 years and are currently one of the most popular pet in the world alongside dogs. They are also one of the most widely known of all pets, with a population of more than 95 million in the United States alone, and more than 600 million worldwide.</p>
-                    </div>
-                </article>
-                <article id="colors">
-                    <div class="info">
-                        <h2>Cat Colors</h2>
-                        <p>Cats come in a variety of colors and patterns. Some common colors include black, white, gray, orange, and brown. Patterns can include solid, tabby, calico, tortoiseshell, and bicolor. Each color and pattern can have different genetic backgrounds and can be influenced by the breed of the cat.</p>
-                        <p>Calico cats are all female due to genetics. Orange tabby cats are known for their friendly personalities, and white cats are sometimes thought to be more prone to deafness. Each color and pattern can have unique stories and characteristics associated with them.</p>
-                    </div>
-                </article>
-                <article id="trivia">
-                    <div class="info">
-                        <h2>Cat Trivia</h2>
-                        <ul>
-                            <li>Cats have five toes on their front paws, but only four toes on their back paws.</li>
-                            <li>A group of cats is called a clowder.</li>
-                            <li>Cats can rotate their ears 180 degrees.</li>
-                            <li>The average cat sleeps for 12-16 hours a day.</li>
-                            <li>Cats have a unique grooming behavior where they lick their fur to keep it clean and regulate their body temperature.</li>
-                            <li>Cats can make over 100 different sounds, while dogs can only make about 10.</li>
-                            <li>The world's oldest cat lived to be 38 years old.</li>
-                        </ul>
-                    </div>
-                </article>    
-            </div>
-            <aside class="side-content">
-                <header>
-                    <div>
-                        <h1>Creator of the website:</h1>
-                        <img src="./assets/cat_profile.jpg" alt="" class="profile-img">
-                        <p>Briran</p>
-                    </div>
-                </header>
-            </aside>
+    <main class="content">
+        <div class="articles-div">
+            <article id="about">
+                <div class="info">
+                    <h2>About Cats</h2>
+                    <img src="./assets/cat_stare.webp" alt="cat_stare">
+                    <p>The domestic cat or the latin name <i>Felis Catus</i> is a small, furry, and carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. Cats are valued by humans for companionship and their ability to hunt vermin such as mice. As of now around 60 cat breeds are recognized by various cat registries.</p>
+                    <p>Cats have been associated with humans for at least 9,500 years and are currently one of the most popular pet in the world alongside dogs. They are also one of the most widely known of all pets, with a population of more than 95 million in the United States alone, and more than 600 million worldwide.</p>
+                </div>
+            </article>
+            <article id="colors">
+                <div class="info">
+                    <h2>Cat Colors</h2>
+                    <p>Cats come in a variety of colors and patterns. Some common colors include black, white, gray, orange, and brown. Patterns can include solid, tabby, calico, tortoiseshell, and bicolor. Each color and pattern can have different genetic backgrounds and can be influenced by the breed of the cat.</p>
+                    <p>Calico cats are all female due to genetics. Orange tabby cats are known for their friendly personalities, and white cats are sometimes thought to be more prone to deafness. Each color and pattern can have unique stories and characteristics associated with them.</p>
+                </div>
+            </article>
+            <article id="trivia">
+                <div class="info">
+                    <h2>Cat Trivia</h2>
+                    <ul>
+                        <li>Cats have five toes on their front paws, but only four toes on their back paws.</li>
+                        <li>A group of cats is called a clowder.</li>
+                        <li>Cats can rotate their ears 180 degrees.</li>
+                        <li>The average cat sleeps for 12-16 hours a day.</li>
+                        <li>Cats have a unique grooming behavior where they lick their fur to keep it clean and regulate their body temperature.</li>
+                        <li>Cats can make over 100 different sounds, while dogs can only make about 10.</li>
+                        <li>The world's oldest cat lived to be 38 years old.</li>
+                    </ul>
+                </div>
+            </article>    
         </div>
+        <aside class="side-content">
+            <div>
+                <h1>Creator of the website:</h1>
+                <img src="./assets/profil.jpg" alt="" class="profile-img">
+                <li>
+                    <ul><b>Nama:</b> Alexander Brian Susanto</ul>
+                    <ul><b>Tempat Tinggal:</b> Jakarta</ul>
+                    <ul><b>Tanggal Lahir:</b> 01/11/04</ul>
+                </li>
+            </div>
+        </aside>
     </main>
 
     <footer>
